--- a/templates/pages/settings.html
+++ b/templates/pages/settings.html
@@ -1,3 +1,7 @@
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+
 <div class="container-fluid settings-wrapper">
 
 
@@ -5,29 +9,36 @@
 
         <!-- Create centered jumbotron -->
 
-        <div class="jumbotron form-jumbo">
+        <div class="jumbotron form-jumbo mt-0">
             <div class="col-12 jumbo-content mx-auto">
 
+                <div class="col-12 mt-0">
+                    <h3 class="heading text-center">My Settings</h3>
+                    <div class="heading-ul"></div>
+                </div>
 
                 <!-- Settings Form -->
 
                 <form id="settingsform" method="POST">
 
                     <div class="form-group">
-                        <label class="settings-label" for="settingsUsername">Username</label><small>Username cannot be
-                            changed.</small>
-                        <input type="text" class="form-control" id="loginUsername" name="username" readonly>
+                        <label class="settings-label" for="settingsUsername">Username*</label>
+                        <input type="text" class="form-control" id="loginUsername" name="username"
+                            value="{{username.username}}" readonly>
+                        *<small> (Username cannot be changed.)</small>
                     </div>
+
                     <div class="form-group">
                         <label class="settings-label" for="settingsPassword">Password</label>
                         <input type="password" class="form-control" name="password" id="settingsPassword"
-                            value="{{username.password}}">
+                            value="{{username.password}}" readonly>
                     </div>
                     <div class="form-group">
                         <label class="settings-label" for="Email">E-Mail</label>
                         <input type="email" class="form-control" name="email" id="settingsEmail"
                             placeholder="myemail@email.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-                            title="email addresses must follow standard email pattern" value="{{username.email}}">
+                            title="email addresses must follow standard email pattern" value="{{username.email}}"
+                            readonly>
                     </div>
 
                     <!-- Edit Button  -->
@@ -43,3 +54,5 @@
         </div>
     </div>
 </div>
+
+{% endblock %}
