--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -69,6 +69,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
+        <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/hideshowpassword/2.0.8/hideShowPassword.min.js”></script>
 
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -140,7 +141,7 @@
     <script src="{{url_for('static', filename='js/logreg.js')}}"></script>
     {% endif %}
 
-    {% if active == 'myprofile' %}
+    {% if active == 'myprofile' or active == 'profile' %}
 
     <script src="{{url_for('static', filename='js/userarea.js')}}"></script>
 
