--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -28,7 +28,7 @@
             {% if loggedIn != True %}
             <div class="col-12 d-block" id="btn-div">
 
-                <a href="{{url_for('register', _anchor = 'register-tab')}}" class="btn btn-primary btn-large"
+                <a href="{{url_for('register', _anchor = 'register-tab')}}" class="btn btn-primary btn-large hero-btn"
                     id="hero-btn">Sign up!</a>
 
             </div>
@@ -38,7 +38,7 @@
 
             <div class="col-12 d-block" id="btn-div">
 
-                <a href="{{url_for('profile', username=session['username'])}}" class="btn btn-primary btn-large"
+                <a href="{{url_for('profile', username=session['username'])}}" class="btn btn-primary btn-large hero-btn"
                     id="hero-btn">My Account</a>
 
             </div>
