correct index.html positioning.

--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -87,17 +87,17 @@
 
 }
 
-#btn-div {
-    position: absolute;
+// #btn-div {
+//     position: absolute;
 
-    top: 60%;
-    left: 37%;
+//     top: 60%;
+//     left: 37%;
 
 
-    @media (min-width: $bp-mobile) {
-        left: 46%;
-    }
-}
+//     @media (min-width: $bp-mobile) {
+//         left: 46%;
+//     }
+// }
 
 .hero-btn {
 
