--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -18,55 +18,10 @@
             <h4>Search Users</h4>
         </div>
 
+        <h5 class="filter-header"><i class="fas fa-location-arrow"></i> Skills</h5>
 
+        {% for skill in skills %}
 
-        <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
-        <nav>
-            <ul class="nav nav-tabs">
-
-                <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab" role="tab"
-                        aria-controls="skills"><i class="fas fa-share-alt"></i> I'm proficient
-                        in...</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkills-tab" role="tab"
-                        aria-controls="desiredSkills"><i class="fas fa-search"></i> Looking
-                        for...</a>
-                </li>
-
-            </ul>
-        </nav>
-
-        <!-- Tab Contents -->
-
-        <div class="tab-content">
-
-            <!-- Begin "I'm proficient in..." Skills Tab -->
-            <div class="tab-pane container fade show active" id="skillsTab" role="tabpanel" aria-labelledby="skills-tab">
-                <div class="skill-column">
-
-                    {% include 'components/skills_list.html' %}
-
-                </div>
-
-                <!-- End "I'm proficient in..." Skills Tab -->
-            </div>
-
-
-            <!-- Begin "Looking for..." desired skills tab -->
-            <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
-                aria-labelledby="desiredSkills-tab">
-
-                <div class="skill-column">
-
-                    {% include 'components/desired_skills_list.html' %}
-
-
-                </div>
-                <!-- End "Looking for..." desired skills tab -->
-            </div>
-        </div>
 
         <!-- The following select classes rely on the bootstrap-select library: https://developer.snapappointments.com/bootstrap-select/ -->
 
