--- a/static/scss/_user_details.scss
+++ b/static/scss/_user_details.scss
@@ -8,9 +8,12 @@
 .user-content {
     background: #fff;
     box-shadow: 0px 0px 4px 0px #b0b3b7;
+    max-width: 70%;
+    margin: 0 auto;
 
     @media (max-width: $bp-mobile) {
         height: 200vh;
+        max-width: 80%;
     }
 }
 
@@ -122,7 +125,8 @@ display: flex;
     position: absolute;
 top: 0;
 margin-top: 5vh;
-left: 0;
+left: 20;
+margin-bottom: 5vh;
 font-weight: 700;
 color: $teal;
 animation: textshadow 8s infinite alternate; 
