--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -28,7 +28,7 @@
                 <div class="row">
 
                     <div class="col-12 justify-content-center">
-                        <h3 class="heading">
+                        <h3 class="profile-heading">
                             < header>
 
                         </h3>
@@ -102,7 +102,7 @@
 
                 <div class="col-12 justify-content-center">
 
-                    <h3 class="heading">
+                    <h3 class="profile-heading">
                         < body>
                             </header>
                     </h3>
@@ -264,7 +264,7 @@
             <div class="row">
 
                 <div class="col-12">
-                    <h3 class="heading">
+                    <h3 class="profile-heading">
                         < footer>
 
                     </h3>
