--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -29,7 +29,16 @@
 padding: 0.3rem !important;
 }
 
+.profile-heading {
+    font-size: 1.6rem;
+    font-family: 700;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 5vh;
+}
+
 .profile-jumbo {
     max-width: 80%;
     margin: 5vh auto;
+    border-radius: 25px;
 }
