--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -21,7 +21,7 @@
             <div class="row">
 
                 <div class="col-12 justify-content-center">
-                    <h3 class="heading">
+                    <h3 class="profile-heading">
                         < header>
 
                     </h3>
@@ -96,7 +96,7 @@
 
                 <div class="col-12 justify-content-center">
 
-                    <h3 class="heading">
+                    <h3 class="profile-heading">
                         < body>
                             </header>
                     </h3>
@@ -316,7 +316,7 @@
             <div class="row">
 
                 <div class="col-12">
-                    <h3 class="heading">
+                    <h3 class="profile-heading">
                         < footer>
 
                     </h3>
