--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -56,7 +56,7 @@
             <div class="row">
 
                 <div class="col-12 justify-content-center">
-                    <h3 class="heading">
+                    <h3 class="profile-heading">
                         < header>
 
                     </h3>
@@ -121,7 +121,7 @@
 
             <div class="col-12 justify-content-center">
 
-                <h3 class="heading">
+                <h3 class="profile-heading">
                     < body>
                         </header>
                 </h3>
@@ -284,7 +284,7 @@
         <div class="row">
 
             <div class="col-12">
-                <h3 class="heading">
+                <h3 class="profile-heading">
                     < footer>
 
                 </h3>
